# trade-radar

./: .env.example  .gitignore  CLAUDE.md  E2E-TEST-PLAN.md  README.md  architecture.md  claude-code-prompt.md  mvp-week1.md  pyproject.toml  risks-and-open-items.md  roadmap.md  signal-log-schema.md  thesis.example.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-data-layer/: 02-PLAN.md  02-RESEARCH.md  02-SECURITY.md  02-SUMMARY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-news-classifier/: 03-PLAN.md  03-RESEARCH.md  03-SECURITY.md  03-SUMMARY.md  03-UAT.md  (+2 more)
.planning/quick/: system-activity-findings.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/reviews/: 2026-07-02-staff-review.md
ops/: operator-setup-checklist.md  task-scheduler-reference.xml  windows-task-scheduler.md
src/signal_system/: __main__.py  config.py  models.py  reconciler.py
tests/: conftest.py  test_advisor_agent.py  test_advisor_job.py  test_alert_router.py  test_discovery_agent.py  test_holdings_loader.py  test_job_orchestration.py  test_news_classifier.py  test_outcome_backfill.py  test_rationale.py  test_reconciler.py  test_repository_advisor.py  test_smoke.py  test_verdict_engine.py  test_weight_amplifier.py  test_yahoo_client.py
(+76 files in other folders)
