[project]
name = "signal-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "finnhub-python",
    "python-dotenv",
    "pyyaml",
    "httpx",
    "pydantic>=2.0",
    "tzdata",
    "tenacity>=9.1.4",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
